--- a/backend/english-sentences/src/main/resources/application.properties
+++ b/backend/english-sentences/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/english-sentences
-spring.datasource.username=postgres
-spring.datasource.password=root
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
+#spring.datasource.url=jdbc:postgresql://localhost:5432/english-sentences
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
