--- a/backend/english-sentences/src/main/resources/application.yml
+++ b/backend/english-sentences/src/main/resources/application.yml
@@ -33,3 +33,5 @@ spring:
 #        format_sql: true
 #    database: postgresql
 #    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+#      ddl-auto: update
