adde security config properties

--- a/backend/english-sentences/src/main/resources/application.yml
+++ b/backend/english-sentences/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
       banner:
         location: classpath:banner.txt
 
+security-config:
+  open: /api/v1/demo-controller-open
+
+
 #spring:
 #  datasource:
 #    url: jdbc:postgresql://localhost:5432/jwt_security
