--- a/backend/english-sentences/src/main/resources/application-test.yml
+++ b/backend/english-sentences/src/main/resources/application-test.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/english-sentences-test
-    username: postgres
-    password: root
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: update
@@ -11,44 +11,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-#spring:
-#  datasource:
-#    url: jdbc:h2:mem:testdb
-#    username: sa
-#    password:
-#    driverClassName: org.h2.Driver
-#  jpa:
-#    show-sql: true
-#    properties:
-#      hibernate.format_sql: true
-
-
+    database-platform: org.hibernate.dialect.H2Dialect
 
 security-config:
   open1: /api/v1/secured/**
   open2: /api/v1/demo-controller/**
   testvar: mytestvar2
-
-
-
-
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/jwt_security
-#    username: postgres
-#    password: root
-#    driver-class-name: org.postgresql.Driver
-#  jpa:
-#    hibernate:
-#      ddl-auto: create-drop
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
-#    database: postgresql
-#    database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-#      ddl-auto: update
