--- a/backend/english-sentences/src/main/resources/application-test.yml
+++ b/backend/english-sentences/src/main/resources/application-test.yml
@@ -1,3 +1,19 @@
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/english-sentences-test
+#    username: postgres
+#    password: root
+#    driver-class-name: org.postgresql.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#    database: postgresql
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
@@ -12,6 +28,10 @@ spring:
       hibernate:
         format_sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+
+    spring:
+      banner:
+        location: classpath:banner.txt
 
 security-config:
   open1: /api/v1/secured/**
