added get random sentece for user integration test

--- a/backend/english-sentences/src/main/resources/application.yml
+++ b/backend/english-sentences/src/main/resources/application.yml
@@ -19,8 +19,7 @@ spring:
         location: classpath:banner.txt
 
 security-config:
-#  open1: /api/v1/secured/**
-  open: /api/v1/demo-controller-open
+  open1: /api/v1/open/**
   testvar: mytestvar1
 
 
