--- a/backend/english-sentences/src/main/resources/application-test.yml
+++ b/backend/english-sentences/src/main/resources/application-test.yml
@@ -6,7 +6,7 @@
 #    driver-class-name: org.postgresql.Driver
 #  jpa:
 #    hibernate:
-#      ddl-auto: update
+#      ddl-auto: create
 #    show-sql: true
 #    properties:
 #      hibernate:
@@ -35,5 +35,4 @@ spring:
 
 security-config:
   open1: /api/v1/secured/**
-  open2: /api/v1/demo-controller/**
   testvar: mytestvar2
