--- a/backend/english-sentences/src/main/resources/application-test.yml
+++ b/backend/english-sentences/src/main/resources/application-test.yml
@@ -20,6 +20,10 @@ spring:
     username: sa
     password:
     driverClassName: org.h2.Driver
+  flyway:
+    enabled: false
+    locations: classpath:db/migration
+    baselineOnMigrate: true
   jpa:
     hibernate:
       ddl-auto: update
