--- a/backend/english-sentences/src/main/resources/application.yml
+++ b/backend/english-sentences/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     username: postgres
     password: root
     driver-class-name: org.postgresql.Driver
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baselineOnMigrate: true
   jpa:
     hibernate:
       ddl-auto: update
