--- a/backend/english-sentences/src/main/resources/application.yml
+++ b/backend/english-sentences/src/main/resources/application.yml
@@ -1,36 +1,6 @@
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/english-sentences
-#    username: postgres
-#    password: root
-#    driver-class-name: org.postgresql.Driver
-#  flyway:
-#    enabled: true
-#    locations: classpath:db/migration
-#    baselineOnMigrate: true
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
-#    database: postgresql
-#    database-platform: org.hibernate.dialect.PostgreSQLDialect
-#
-#    spring:
-#      banner:
-#        location: classpath:banner.txt
-#
-#security-config:
-#  open1: /api/v1/open/**
-#  testvar: mytestvar1
-
-
-#docker
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/english-sentences
     username: postgres
     password: root
     driver-class-name: org.postgresql.Driver
@@ -55,3 +25,33 @@ spring:
 security-config:
   open1: /api/v1/open/**
   testvar: mytestvar1
+
+
+#docker
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/postgres
+#    username: postgres
+#    password: root
+#    driver-class-name: org.postgresql.Driver
+#  flyway:
+#    enabled: true
+#    locations: classpath:db/migration
+#    baselineOnMigrate: true
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#    database: postgresql
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#
+#    spring:
+#      banner:
+#        location: classpath:banner.txt
+#
+#security-config:
+#  open1: /api/v1/open/**
+#  testvar: mytestvar1
